# localauthentication-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: external.rs  lib.rs
swift-lib/: .gitignore  Package.swift  README.md
swift-lib/src/: lib.swift
